--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,7 +1,7 @@
 <div class="center_align"</div>
 <section class="description">
 <div id="pattern" class="pattern">
-  <div class="col-group">
+  <div class="three-col-group">
 <div><p><strong>The Hashtag</strong></p>
 <p>#<%= @story.hashtag %></p>
 <p><img src="<%= @story.photo_url %>" width="300px"/></p></div>
