--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -59,154 +59,117 @@
           <figure data-dummy>
             <a href="#" class="photostack-img"><img src="http://distilleryimage3.ak.instagram.com/fffaf6d822d811e3ba2d22000a1f97cd_7.jpg" alt="img08"/></a>
             <figcaption>
-              <h2 class="photostack-title">Wonderful</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
+              <h2 class="photostack-title">#thebigadventure</h2>
             </figcaption>
           </figure>
           <figure data-dummy>
             <a href="#" class="photostack-img"><img src="http://distilleryimage4.ak.instagram.com/2dcabdd623d911e39dfb22000a9e5ac6_7.jpg" alt="img09"/></a>
             <figcaption>
-              <h2 class="photostack-title">Love Addict</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
+              <h2 class="photostack-title">#thecuteness</h2>
             </figcaption>
           </figure>
           <figure data-dummy>
             <a href="#" class="photostack-img"><img src="http://distilleryimage8.ak.instagram.com/9620923ec54211e2928c22000a9f3092_7.jpg" alt="img10"/></a>
             <figcaption>
-              <h2 class="photostack-title">Friendship</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
+              <h2 class="photostack-title">#sayinggoodbye</h2>
             </figcaption>
           </figure>
           <figure data-dummy>
             <a href="#" class="photostack-img"><img src="http://distilleryimage3.ak.instagram.com/f0324adaa48411e2816b22000a9f17df_7.jpg" alt="img11"/></a>
             <figcaption>
-              <h2 class="photostack-title">White Nights</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
+              <h2 class="photostack-title">#zurislove</h2>
             </figcaption>
           </figure>
           <figure data-dummy>
             <a href="#" class="photostack-img"><img src="http://distilleryimage2.ak.instagram.com/776f44e86ee511e1abb01231381b65e3_7.jpg" alt="img12"/></a>
             <figcaption>
-              <h2 class="photostack-title">Serendipity</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
+              <h2 class="photostack-title">#myfirstvisit</h2>
             </figcaption>
           </figure>
           <figure data-dummy>
             <a href="#" class="photostack-img"><img src="http://distilleryimage8.ak.instagram.com/f029d1840e7511e2afe522000a1c8934_7.jpg" alt="img13"/></a>
             <figcaption>
-              <h2 class="photostack-title">Pure Soul</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
+              <h2 class="photostack-title">#futureforbrian</h2>
             </figcaption>
           </figure>
           <figure data-dummy>
             <a href="#" class="photostack-img"><img src="http://distilleryimage5.ak.instagram.com/b6572bdade7a11e19f661231381b69db_7.jpg" alt="img14"/></a>
             <figcaption>
-              <h2 class="photostack-title">Winds of Peace</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
+              <h2 class="photostack-title">#theaccident</h2>
             </figcaption>
           </figure>
           <figure data-dummy>
             <a href="#" class="photostack-img"><img src="http://distilleryimage8.ak.instagram.com/8f35358acc8511e1aaec22000a1e88af_7.jpg" alt="img15"/></a>
             <figcaption>
-              <h2 class="photostack-title">Shades of blue</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
+              <h2 class="photostack-title">#kidsoftol</h2>
             </figcaption>
           </figure>
           <figure data-dummy>
             <a href="#" class="photostack-img"><img src="http://distilleryimage1.ak.instagram.com/30f668049ad011e1af7612313813f8e8_7.jpg" alt="img16"/></a>
             <figcaption>
-              <h2 class="photostack-title">Lightness</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
+              <h2 class="photostack-title">#oneyellowballoon</h2>
             </figcaption>
           </figure>
           </figure>
           <figure data-dummy>
-            <a href="#" class="photostack-img"><img src="http://distilleryimage1.ak.instagram.com/30f668049ad011e1af7612313813f8e8_7.jpg" alt="img16"/></a>
+            <a href="#" class="photostack-img"><img src="http://distilleryimage7.ak.instagram.com/f70e54fc170211e3950422000aa8010c_7.jpg" alt="img16"/></a>
             <figcaption>
-              <h2 class="photostack-title">Lightness</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
+              <h2 class="photostack-title">#littleaziza</h2>
             </figcaption>
           </figure>
           </figure>
           <figure data-dummy>
-            <a href="#" class="photostack-img"><img src="http://distilleryimage1.ak.instagram.com/30f668049ad011e1af7612313813f8e8_7.jpg" alt="img16"/></a>
+            <a href="#" class="photostack-img"><img src="http://distilleryimage6.ak.instagram.com/ca25d86a382811e3a5e422000aaa08f8_8.jpg" alt="img16"/></a>
             <figcaption>
-              <h2 class="photostack-title">Lightness</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
+              <h2 class="photostack-title">#grandmacarrol</h2>
             </figcaption>
           </figure>
           </figure>
           <figure data-dummy>
-            <a href="#" class="photostack-img"><img src="http://distilleryimage1.ak.instagram.com/30f668049ad011e1af7612313813f8e8_7.jpg" alt="img16"/></a>
+            <a href="#" class="photostack-img"><img src="http://distilleryimage6.ak.instagram.com/e4af1f823d1611e3a5c622000aa8033b_8.jpg" alt="img16"/></a>
             <figcaption>
-              <h2 class="photostack-title">Lightness</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
+              <h2 class="photostack-title">#peejshope</h2>
+          </figure>
+          </figure>
+          <figure data-dummy>
+            <a href="#" class="photostack-img"><img src="http://distilleryimage3.ak.instagram.com/37983196471911e3938522000a1fb8b0_8.jpg" alt="img16"/></a>
+            <figcaption>
+              <h2 class="photostack-title">#lovethecampassion</h2>
             </figcaption>
           </figure>
           </figure>
           <figure data-dummy>
-            <a href="#" class="photostack-img"><img src="http://distilleryimage1.ak.instagram.com/30f668049ad011e1af7612313813f8e8_7.jpg" alt="img16"/></a>
+            <a href="#" class="photostack-img"><img src="http://distilleryimage4.ak.instagram.com/cdcb19627b8611e2943422000a9f1416_7.jpg" alt="img16"/></a>
             <figcaption>
-              <h2 class="photostack-title">Lightness</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
+              <h2 class="photostack-title">#thecarcrash</h2>
             </figcaption>
           </figure>
           </figure>
           <figure data-dummy>
-            <a href="#" class="photostack-img"><img src="http://distilleryimage1.ak.instagram.com/30f668049ad011e1af7612313813f8e8_7.jpg" alt="img16"/></a>
+            <a href="#" class="photostack-img"><img src="http://distilleryimage3.ak.instagram.com/407da1d2e9eb11e2ae7222000aaa0519_7.jpg" alt="img16"/></a>
             <figcaption>
-              <h2 class="photostack-title">Lightness</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
+              <h2 class="photostack-title">#mattsstory</h2>
             </figcaption>
           </figure>
           </figure>
           <figure data-dummy>
-            <a href="#" class="photostack-img"><img src="http://distilleryimage1.ak.instagram.com/30f668049ad011e1af7612313813f8e8_7.jpg" alt="img16"/></a>
+            <a href="#" class="photostack-img"><img src="http://distilleryimage4.ak.instagram.com/69cf84de38b411e38ab422000aa80430_8.jpg" alt="img16"/></a>
             <figcaption>
-              <h2 class="photostack-title">Lightness</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
+              <h2 class="photostack-title">#survivornate</h2>
             </figcaption>
           </figure>
           </figure>
           <figure data-dummy>
-            <a href="#" class="photostack-img"><img src="http://distilleryimage1.ak.instagram.com/30f668049ad011e1af7612313813f8e8_7.jpg" alt="img16"/></a>
+            <a href="#" class="photostack-img"><img src="http://distilleryimage4.ak.instagram.com/7e01c7fe390011e3afd722000a1f98d6_8.jpg" alt="img16"/></a>
             <figcaption>
-              <h2 class="photostack-title">Lightness</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
+              <h2 class="photostack-title">#jadesstruggle</h2>
             </figcaption>
           </figure>
           </figure>
           <figure data-dummy>
-            <a href="#" class="photostack-img"><img src="http://distilleryimage1.ak.instagram.com/30f668049ad011e1af7612313813f8e8_7.jpg" alt="img16"/></a>
+            <a href="#" class="photostack-img"><img src="http://distilleryimage5.ak.instagram.com/81808bce846211e3b98c0e4d1ad2c28d_8.jpg" alt="img16"/></a>
             <figcaption>
-              <h2 class="photostack-title">Lightness</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
-            </figcaption>
-          </figure>
-          </figure>
-          <figure data-dummy>
-            <a href="#" class="photostack-img"><img src="http://distilleryimage1.ak.instagram.com/30f668049ad011e1af7612313813f8e8_7.jpg" alt="img16"/></a>
-            <figcaption>
-              <h2 class="photostack-title">Lightness</h2>
-              <div class="photostack-back">
-                <p>What might be right for you may not be right for some. And we know Flipper lives in a world full of wonder flying there-under under the sea.</p>
+              <h2 class="photostack-title">#giveericahope</h2>
             </figcaption>
           </figure>
         </div>
@@ -222,7 +185,7 @@
         <p>Hashback is a way to share to give <strong>love</strong> and <strong>encouragement</strong> digitally.</p>
         <p><strong>Here is how it works.</strong></p>
         <div id="pattern" class="pattern">
-  <div class="col-group">
+  <div class="three-col-group">
     <div>
         <p>Share your story.</p>
       </div><div>
