--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -493,3 +493,30 @@ color: white;
     width: 50%;
   }
 }
+
+/*FORMS STYLING*/
+
+input[type="submit"] {
+  width: 260px;
+  height: 60px;
+  text-transform: uppercase;
+  margin-top: 40px;
+}
+
+input[type="submit"]:hover, input[type="submit"]:active {
+  width: 260px;
+  height: 60px;
+  text-transform: uppercase;
+  margin-top: 40px;
+  color: #fff;
+  background: #6D6D6D;
+
+}
+
+
+input {
+width: 300px;
+font-size: 150%;
+}
+
+
