--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -7,18 +7,24 @@
   </div>
 <% end %>
 
-<div class="login_form">
+<h1>Welcome Back</h1>
+<div class="description main-text">
 
   <%= form_tag "/session" do %>
     <p>
     <%= label_tag :email %>
+  </p>
+    <p>
     <%= email_field_tag :email %>
   </p>
   <p>
     <%= label_tag :password %>
+    </p>
+      <p>
     <%= password_field_tag :password %>
     </p>
-    <%= submit_tag "Log in!" %>
+    <%= submit_tag "Log in" %>
   <% end %>
 
 </div>
+</section>
