adding css and profile pic from instagram

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -501,22 +501,35 @@ input[type="submit"] {
   height: 60px;
   text-transform: uppercase;
   margin-top: 40px;
+  border: none;
 }
 
 input[type="submit"]:hover, input[type="submit"]:active {
-  width: 260px;
-  height: 60px;
-  text-transform: uppercase;
-  margin-top: 40px;
   color: #fff;
   background: #6D6D6D;
-
 }
 
 
 input {
 width: 300px;
 font-size: 150%;
+outline: none;
 }
 
+.profile {
+  background: #B6B6B6;
+}
+.profile-box {
+  background: #fff;
+  margin: 5px;
+}
 
+.profile-box  h1 {
+  color: #4E3770;
+  padding-top: 10px;
+}
+
+.profile-box  a {
+  color: #4E3770;
+  font-size: 20px;
+}
