--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -8,8 +8,8 @@
 <% end %>
 
 <h1>Welcome Back</h1>
-<div class="description main-text">
-
+<div class="main-text">
+<br>
   <%= form_tag "/session" do %>
     <p>
     <%= label_tag :email %>
@@ -25,6 +25,6 @@
     </p>
     <%= submit_tag "Log in" %>
   <% end %>
-
+<br>
 </div>
 </section>
