--- a/app/assets/stylesheets/component.css
+++ b/app/assets/stylesheets/component.css
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
 	font-family: 'icons';
 	src:url('assets/icons/icons.eot');
 	src:url('assets/icons/icons.eot?#iefix') format('embedded-opentype'),
@@ -7,7 +7,7 @@
 		url('assets/icons/icons.svg#icons') format('svg');
 	font-weight: normal;
 	font-style: normal;
-}
+}*/
 
 .photostack {
 	background: #ddd;
@@ -72,7 +72,7 @@
 	top: 0;
 	left: 0;
 	background: #fff;
-	font-family: "Give You Glory", cursive;
+	font-family: 'Give You Glory', cursive;
 	color: #a7a0a2;
 	padding: 50px 40px;
 	text-align: left;
