--- a/app/assets/stylesheets/component.css
+++ b/app/assets/stylesheets/component.css
@@ -72,7 +72,7 @@
 	top: 0;
 	left: 0;
 	background: #fff;
-	font-family: 'Give You Glory';
+	font-family: 'Lato';
 	color: #a7a0a2;
 	padding: 50px 40px;
 	text-align: left;
