--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -1,5 +1,5 @@
-<%= link_to "Go Back", user_path(@user) %>
+<h4><%= link_to "Go Back", user_path(@user) %></h4>
 <%= render "form" %>
  <p><%= form_tag story_path(@story), method: "delete" do %>
-            <%= submit_tag("Delete") %>
+            <%= submit_tag("Delete Story") %>
             <% end %></p>
