--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -185,7 +185,7 @@
   <div id="pattern" class="pattern">
     <div class="three-col-group">
       <div>
-        <p><strong>Share your story.</strong></p>
+        <p><strong id="story-stats">Share your story.</strong></p>
         <svg xmlns="http://www.w3.org/2000/svg" width="110px" height="110px" class="polaroid" preserveAspectRatio="xMidYMid meet" viewBox="0 0 300 300">
           <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
           <rect id="svg_2" height="0" width="1" y="108" x="123"/>
@@ -194,7 +194,7 @@
         </svg>
       </div>
       <div>
-        <p><strong>Find other stories.</strong></p>
+        <p><strong id="story-stats">Find other stories.</strong></p>
         <svg xmlns="http://www.w3.org/2000/svg" width="110px" height="110px" class="polaroid" preserveAspectRatio="xMidYMid meet" viewBox="0 0 300 300">
           <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
           <rect id="svg_2" height="0" width="1" y="108" x="123"/>
@@ -205,7 +205,7 @@
         </svg>
       </div>
       <div>
-        <p><strong>Use the Hashtag.</strong></p>
+        <p><strong id="story-stats">Use the Hashtag.</strong></p>
         <div id="hashtag-icon"><strong>#<strong></div>
       </div>
     </div>
