--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -162,7 +162,7 @@
       <figure data-dummy>
         <a href="#" class="photostack-img"><img src="http://distilleryimage4.ak.instagram.com/7e01c7fe390011e3afd722000a1f98d6_8.jpg" alt="img16"/></a>
         <figcaption>
-          <h2 class="photostack-title">#jadesstruggle</h2>
+          <h2 class="photostack-title">#jaydesstruggle</h2>
         </figcaption>
       </figure>
     </figure>
