hashback told by

--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -24,7 +24,7 @@
         <div>
           HashBack Told By: 
         </div>
-        <a href="/users/<%= @user.id %>"><img src="<%= @instagram["profile_picture"] %>" width="60px;"/></a>
+        <a href="/users/<%= @story.user_id %>"><img src="<%= @instagram["profile_picture"] %>" width="60px;"/></a>
       </div>
     </div>
   </div>
